{
  "version": 4,
  "terraform_version": "1.13.4",
  "serial": 46,
  "lineage": "dac56827-8fad-3307-08f4-5e5f4bf2acb9",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_iap_ssh_to_management",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-11T12:34:30.654-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/enterprise-bank-495917/global/firewalls/allow-iap-ssh-to-management",
            "log_config": [],
            "name": "allow-iap-ssh-to-management",
            "network": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/global/networks/enterprise-security-vpc",
            "priority": 1000,
            "project": "enterprise-bank-495917",
            "self_link": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/global/firewalls/allow-iap-ssh-to-management",
            "source_ranges": [
              "35.235.240.0/20"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [
              "management"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.enterprise_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_internal_icmp",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [],
                "protocol": "icmp"
              }
            ],
            "creation_timestamp": "2026-05-11T12:34:31.224-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/enterprise-bank-495917/global/firewalls/allow-internal-icmp",
            "log_config": [],
            "name": "allow-internal-icmp",
            "network": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/global/networks/enterprise-security-vpc",
            "priority": 1000,
            "project": "enterprise-bank-495917",
            "self_link": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/global/firewalls/allow-internal-icmp",
            "source_ranges": [
              "10.10.0.0/16"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.enterprise_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "allow_management_to_internal",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22",
                  "80",
                  "443"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2026-05-11T12:34:32.445-07:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/enterprise-bank-495917/global/firewalls/allow-management-to-internal",
            "log_config": [],
            "name": "allow-management-to-internal",
            "network": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/global/networks/enterprise-security-vpc",
            "priority": 1000,
            "project": "enterprise-bank-495917",
            "self_link": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/global/firewalls/allow-management-to-internal",
            "source_ranges": [],
            "source_service_accounts": [],
            "source_tags": [
              "management"
            ],
            "target_service_accounts": [],
            "target_tags": [
              "application",
              "data"
            ],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.enterprise_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "bastion_host",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "enable_confidential_compute": false,
                    "image": "https://www.googleapis.com/compute/v1/projects/ubuntu-os-cloud/global/images/ubuntu-2204-jammy-v20260504",
                    "provisioned_iops": 0,
                    "provisioned_throughput": 0,
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/zones/me-west1-b/disks/bastion-host"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/enterprise-bank-495917/zones/me-west1-b/instances/bastion-host",
            "instance_id": "8654734226915037616",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-medium",
            "metadata": {
              "enable-oslogin": "TRUE"
            },
            "metadata_fingerprint": "K3e2mYUlQBc=",
            "name": "bastion-host",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.165.176.233",
                    "network_tier": "PREMIUM"
                  }
                ],
                "internal_ipv6_prefix_length": 0,
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/global/networks/enterprise-security-vpc",
                "network_ip": "10.10.1.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/regions/me-west1/subnetworks/management-subnet",
                "subnetwork_project": "enterprise-bank-495917"
              }
            ],
            "project": "enterprise-bank-495917",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/zones/me-west1-b/instances/bastion-host",
            "service_account": [
              {
                "email": "448720281443-compute@developer.gserviceaccount.com",
                "scopes": [
                  "https://www.googleapis.com/auth/cloud-platform"
                ]
              }
            ],
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "management"
            ],
            "tags_fingerprint": "Ge9GXlQGXK8=",
            "zone": "me-west1-b"
          },
          "sensitive_attributes": [
            [
              {
                "type": "get_attr",
                "value": "boot_disk"
              },
              {
                "type": "index",
                "value": {
                  "value": 0,
                  "type": "number"
                }
              },
              {
                "type": "get_attr",
                "value": "disk_encryption_key_raw"
              }
            ]
          ],
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.enterprise_vpc",
            "google_compute_subnetwork.management_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "enterprise_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/enterprise-bank-495917/global/networks/enterprise-security-vpc",
            "mtu": 0,
            "name": "enterprise-security-vpc",
            "network_firewall_policy_enforcement_order": "AFTER_CLASSIC_FIREWALL",
            "numeric_id": "7504287276305715679",
            "project": "enterprise-bank-495917",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/global/networks/enterprise-security-vpc"
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "enterprise_router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-11T12:34:31.104-07:00",
            "encrypted_interconnect_router": false,
            "id": "projects/enterprise-bank-495917/regions/me-west1/routers/enterprise-router",
            "name": "enterprise-router",
            "network": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/global/networks/enterprise-security-vpc",
            "project": "enterprise-bank-495917",
            "region": "me-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/regions/me-west1/routers/enterprise-router"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.enterprise_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "enterprise_nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_network_tier": "PREMIUM",
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": false,
            "endpoint_types": [
              "ENDPOINT_TYPE_VM"
            ],
            "icmp_idle_timeout_sec": 30,
            "id": "enterprise-bank-495917/me-west1/enterprise-router/enterprise-cloud-nat",
            "log_config": [
              {
                "enable": true,
                "filter": "ERRORS_ONLY"
              }
            ],
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "enterprise-cloud-nat",
            "nat_ip_allocate_option": "AUTO_ONLY",
            "project": "enterprise-bank-495917",
            "region": "me-west1",
            "router": "enterprise-router",
            "source_subnetwork_ip_ranges_to_nat": "ALL_SUBNETWORKS_ALL_IP_RANGES",
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.enterprise_vpc",
            "google_compute_router.enterprise_router"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "application_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-11T12:34:31.344-07:00",
            "gateway_address": "10.10.2.1",
            "id": "projects/enterprise-bank-495917/regions/me-west1/subnetworks/application-subnet",
            "ip_cidr_range": "10.10.2.0/24",
            "name": "application-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/global/networks/enterprise-security-vpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "enterprise-bank-495917",
            "purpose": "PRIVATE",
            "region": "me-west1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.12.0.0/14",
                "range_name": "gke-enterprise-gke-cluster-pods-adf10731"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/regions/me-west1/subnetworks/application-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.enterprise_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "data_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-11T12:34:31.518-07:00",
            "gateway_address": "10.10.3.1",
            "id": "projects/enterprise-bank-495917/regions/me-west1/subnetworks/date-subnet",
            "ip_cidr_range": "10.10.3.0/24",
            "name": "date-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/global/networks/enterprise-security-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "enterprise-bank-495917",
            "purpose": "PRIVATE",
            "region": "me-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/regions/me-west1/subnetworks/date-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.enterprise_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "management_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2026-05-11T12:34:31.523-07:00",
            "gateway_address": "10.10.1.1",
            "id": "projects/enterprise-bank-495917/regions/me-west1/subnetworks/management-subnet",
            "ip_cidr_range": "10.10.1.0/24",
            "name": "management-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/global/networks/enterprise-security-vpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "enterprise-bank-495917",
            "purpose": "PRIVATE",
            "region": "me-west1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/enterprise-bank-495917/regions/me-west1/subnetworks/management-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "google_compute_network.enterprise_vpc"
          ]
        }
      ]
    }
  ]
}